src/objects/Blacklisted_Word__c.object
<CustomObject>
    <fields>
        <fullName>Add_to_Compliance_Audit__c</fullName>
        <defaultValue>true</defaultValue>
        <description>if checked, any posts hitting a blacklist shall be added to an audit table indicating who made the post, the unscrubbed message, and the blacklisted word rule which triggered the compliance breach.</description>
        <label>Add to Compliance Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Expression__c</fullName>
        <description>User entered regular expression.</description>
        <inlineHelpText>Enter your own regular expression here. Setting this value to blank out the word field.
Don&apos;t forget to add \b at the start and end if you want to match on a whole word!</inlineHelpText>
        <label>Custom Expression</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Whole_Words_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, a match will only occur on a whole word. eg: bum vs. bummer</description>
        <label>Match Whole Words Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Post_on_Breach__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, a post which hits a blacklist will not be posted to the chatter feed at all. Checking this box automatically enables the visual warning flag</description>
        <label>Prevent Post on Breach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RegexValue__c</fullName>
        <label>RegexValue</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>Enter a short description of the blacklist word, phrase or expression. Particularly useful add when describing a custom expression</description>
        <inlineHelpText>Enter a short description of the blacklist word, phrase or expression. Particularly useful add when describing a custom expression</inlineHelpText>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substitution__c</fullName>
        <defaultValue>&quot;****&quot;</defaultValue>
        <label>Substitution</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Word__c</fullName>
        <label>Word or Phrase</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this field will mean the word will not be checked as part of the filter</description>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Blacklisted Word</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Word__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BLW-{0000}</displayFormat>
        <label>BlacklistedWord Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blacklisted Words</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>